<resources>

    <!-- Common Resource -->

    <string name="app_name">김포고등학교 스마트 클래스</string>
    <string name="school_name">김포고등학교</string>
    <string name="school_motto">건강하고 창조적이며 성실한 사람</string>

    <string name="action_settings">설정</string>

    <string name="noti_version_is">어플리케이션 버전:</string>

    <string name="quit_prompt">어플리케이션을 종료하시겠습니까?</string>

    <string name="air_info">학교 주변 대기상태 자료\n본 자료는 실시간으로 관측된 자료이며,\n현지 사정·수신 상태에 의해 오차가 발생할 수 있습니다.\n제공: 한국환경공단</string>

    <string name="meal_info">급식정보 자료\n제공: 김포고등학교</string>
    <string name="event_info">학사일정 자료\n제공: 김포고등학교</string>
    <string name="time_info">시간표 자료\n제공: 김포고등학교</string>

    <string name="quit">종료</string>
    <string name="cancel">취소</string>

    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>

    <string name="Grade">학년</string>
    <string name="Class">반</string>

    <string name="Subject">과목</string>
    <string name="Teacher">선생님</string>

    <string name="lunch">[ 중식 ]</string>
    <string name="dinner">[ 석식 ]</string>

    <string name="measure_type">측정항목</string>
    <string name="measure_value">측정값</string>
    <string name="measure_status">상태</string>
    <string name="pm10">미세먼지(PM10)</string>
    <string name="pm25">초미세먼지(PM2.5)</string>
    <string name="o3">오존(O₃)</string>
    <string name="no2">이산화질소(NO₂)</string>
    <string name="co">일산화탄소(CO)</string>
    <string name="so2">아황산가스(SO₂)</string>
    <string name="qual">통합대기환경지수</string>

    <string name="vgood">[ 좋음 ]</string>
    <string name="good">[ 보통 ]</string>
    <string name="bad">[ 나쁨 ]</string>
    <string name="vbad">[ 위험 ]</string>
    <string name="unknown">[ Null ]</string>

    <!-- HomeActivity -->

    <string name="home_title">메인</string>
    <string name="home_header_remember20140416">2014년 4월 16일, 잊지 않겠습니다.</string>

    <string name="home_card_meal_title_am">오늘의 중식</string>
    <string name="home_card_meal_title_pm">오늘의 석식</string>
    <string name="home_card_meal_title_help">여기에 오늘의 급식 정보가 표시됩니다.</string>

    <string name="home_card_time_title">시간표</string>

    <string name="home_card_event_title">오늘의 행사</string>

    <string-array name="home_spinner_day">
        <item>@string/home_card_time_title</item>
        <item>@string/home_card_meal_title_am</item>
        <item>@string/home_card_event_title</item>
        <item>@string/home_card_air_title</item>
    </string-array>
    <string-array name="home_spinner_night">
        <item>@string/home_card_time_title</item>
        <item>@string/home_card_meal_title_pm</item>
        <item>@string/home_card_event_title</item>
        <item>@string/home_card_air_title</item>
    </string-array>

    <!-- TimeTableActivity -->

    <string name="time_title">시간표</string>

    <string name="time_button_grade_back_desc">@string/notYet</string>
    <string name="time_button_grade_forward_desc">@string/notYet</string>
    <string name="time_button_class_back_desc">@string/notYet</string>
    <string name="time_button_class_forward_desc">@string/notYet</string>

    <string-array name="time_spinner_grade">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="time_spinner_class">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
    </string-array>

    <string name="time_card_1st_period">1교시</string>
    <string name="time_card_1st_time">09:10~</string>
    <string name="time_card_2nd_period">2교시</string>
    <string name="time_card_2nd_time">10:10~</string>
    <string name="time_card_3rd_period">3교시</string>
    <string name="time_card_3rd_time">11:10~</string>
    <string name="time_card_4th_period">4교시</string>
    <string name="time_card_4th_time">12:10~</string>
    <string name="time_card_5th_period">5교시</string>
    <string name="time_card_5th_time">14:00~</string>
    <string name="time_card_6th_period">6교시</string>
    <string name="time_card_6th_time">15:00~</string>
    <string name="time_card_7th_period">7교시</string>
    <string name="time_card_7th_time">16:00~</string>

    <string name="time_card_period">교시</string>

    <string name="time_table_info">시간표를 업데이트하는 중입니다&#8230;</string>


    <!-- MealInfoActivity -->

    <string name="meal_title">급식 정보</string>

    <string name="meal_allergic_info">[ 알레르기 정보 ]\n1 난류 2 우유 3 메밀 4 땅콩 5 대두 6 밀 7 고등어 8 게 9 새우 10 돼지고기 11 복숭아 12 토마토 13 아황산염 14 호두 15 닭고기 16 소고기 17 오징어 18 전복 19 홍합</string>

    <!-- SchoolEventActivity -->

    <string name="event_title">학사일정</string>

    <string name="event_private_hint">%s년 %s월 %s일\n메모</string>

    <string name="event_register">등록</string>

    <string name="event_registered">일정이 등록되었습니다.</string>
    <string name="event_deleted">일정이 삭제되었습니다.</string>

    <!-- SettingsActivity -->

    <string name="set_title">설정</string>

    <string name="about">어플리케이션 정보</string>

    <string name="brief">정시 브리핑</string>
    <string name="brief_setting">정시 브리핑 기능 사용하기</string>
    <string name="brief_summary">정해진 시각에 주요 정보를 알려 드립니다.</string>

    <string name="sync_with_gcalendar_setting">Google 캘린더와 일정 동기화</string>
    <string name="sync_with_gcalendar_summary">Google 캘린더에 학사일정을 저장합니다.\n앱에서 Google 캘린더에 저장한 일정을 읽을 수 있습니다.</string>

    <!-- Develop Procedure -->

    <string name="notYet">아직 구현되지 않은 기능입니다.</string>

    <string name="navigation_drawer_open">탐색 창 열기</string>
    <string name="navigation_drawer_close">탐색 창 닫기</string>
    <string name="date">날짜</string>
    <string name="date_format">%s년 %s월 %s일</string>
    <string name="date_time_format">yyyy\'년 \'MM\'월 \'dd\'일 \'HH\'시 \'mm\'분\'</string>
    <string name="home_card_air_title">학교 주변 대기상태</string>
    <string name="home_card_air_help">학교 주변 대기상태</string>
    <string name="air_card_station_hint">측정소명</string>
    <string name="air_card_station">사우동 측정소</string>
    <string name="meal_card_data_null">등록된 식단 정보가 없습니다.</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Exception && Error Handling -->

    <string name="error">에러가 발생했습니다.</string>
    <string name="no_data">데이터가 없습니다.</string>
    <string name="dow">요일</string>
    <string name="nav_header_title">Android Studio</string>


</resources>
