<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kr.hs.gimpo.smartclass.TimeTableActivity"
    tools:showIn="@layout/app_bar_time_table">

    <ImageButton
        android:id="@+id/time_button_grade_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/time_button_grade_back_desc"
        android:src="@drawable/ic_first_page_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/time_button_class_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/time_button_class_back_desc"
        android:src="@drawable/ic_chevron_left_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/time_button_grade_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/time_button_class_forward"
        app:layout_constraintEnd_toStartOf="@+id/time_button_class_forward"
        app:layout_constraintStart_toEndOf="@+id/time_button_class_back"
        app:layout_constraintTop_toTopOf="@+id/time_button_class_back" />

    <ImageButton
        android:id="@+id/time_button_class_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/time_button_class_forward_desc"
        android:src="@drawable/ic_chevron_right_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/time_button_grade_forward"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/time_button_grade_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/time_button_grade_forward_desc"
        android:src="@drawable/ic_last_page_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/time_card"
        android:layout_width="585dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_button_class_back">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/time_card_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/time_card_layout_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
